@@ -3,7 +3,6 @@ package org.openmetadata.service.search.indexes;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import org.openmetadata.schema.entity.services.MetadataService;
 import org.openmetadata.service.Entity;
 import org.openmetadata.service.search.SearchIndexUtils;
@@ -24,10 +23,11 @@ public record MetadataServiceIndex(MetadataService metadataService) implements S
         "fqnParts",
         getFQNParts(
             metadataService.getFullyQualifiedName(),
-            suggest.stream().map(SearchSuggest::getInput).collect(Collectors.toList())));
+            suggest.stream().map(SearchSuggest::getInput).toList()));
     doc.put("suggest", suggest);
     doc.put("entityType", Entity.METADATA_SERVICE);
     doc.put("owner", getEntityWithDisplayName(metadataService.getOwner()));
+    doc.put("followers", SearchIndexUtils.parseFollowers(metadataService.getFollowers()));
     return doc;
   }
 }
